# ai_agent

./: .agent_scratchpad.txt  call_function.py  config.py  config.yaml  conversation_log.md  fileEditor.py  hierarchicalContextManager.py  logger_setup.py  main.py  pyproject.toml  semanticSearcher.py  skeletonizer.py  test_agent_run.py  test_semantic_searcher.py  tests.py  treeSitterBase.py
calculator/: .agent_scratchpad.txt  calculator.py  conversation_log.md  lorem.txt  lorem2.txt  main.py  readme.md  ux_improvements.py  vault.py
calculator/secret_vault/: index.txt
functions/: browser_controller.py  browser_tools.py  edit_file.py  expand_block.py  get_file_content.py  get_file_skeleton.py  get_files_info.py  list_directory.py  load_skill.py  manage_scratchpad.py  run_python_file.py  search_codebase.py  workspace_state.py  write_file.py
secret_vault/: S1  index.txt
skills/: browser.md
