[project] 
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "litellm[proxy]>=1.83.0",
    "mcp>=1.27.0",
    "playwright>=1.59.0",
    "python-dotenv==1.1.0",
    "tiktoken>=0.12.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-python>=0.25.0",
]
